--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -1,19 +1,21 @@
-defaults: &defaults
-  host: localhost
-  preload_models: false
-
 development:
-  <<: *defaults
+  host: localhost
   database: duelbelt_dev
 
 test:
-  <<: *defaults
+  host: localhost
   database: duelbelt_test
 
+# set these environment variables on your prod server
 production:
-  host: <%= ENV["MONGOID_HOST"] %>
-  port: <%= ENV["MONGOID_PORT"] %>
-  username: <%= ENV["MONGOID_USERNAME"] %>
-  password: <%= ENV["MONGOID_PASSWORD"] %>
-  database: <%= ENV["MONGOID_DATABASE"] %>
+  host: <%= ENV['MONGOID_HOST'] %>
+  port: <%= ENV['MONGOID_PORT'] %>
+  username: <%= ENV['MONGOID_USERNAME'] %>
+  password: <%= ENV['MONGOID_PASSWORD'] %>
+  database: <%= ENV['MONGOID_DATABASE'] %>
+  # slaves:
+  #   - host: slave1.local
+  #     port: 27018
+  #   - host: slave2.local
+  #     port: 27019
 
